Update 'r58mtak6m-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:a196247a65402f8ade9f5e12cc56c755cc1a73cc@sha256:7aee46837d163662ad7ce50ef8431beaadd48392c9177c979e4b065c340c6f11

--- a/components/r58mtak6m-go/overlays/development/deployment-patch.yaml
+++ b/components/r58mtak6m-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: r58mtak6m-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:a196247a65402f8ade9f5e12cc56c755cc1a73cc@sha256:7aee46837d163662ad7ce50ef8431beaadd48392c9177c979e4b065c340c6f11
+          name: container-image
